--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-markdown-display": "^7.0.2",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-nitro-modules": "0.29.0",
     "react-native-permissions": "^5.4.2",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.17.4",
