--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-audio": "^0.4.8",
     "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
+    "expo-build-properties": "~0.14.8",
     "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
