--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "nodemailer": "^7.0.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "^0.79.6",
     "react-native-audio-recorder-player": "^4.3.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
