--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-speech": "~13.1.7",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "^5.0.10",
     "nodemailer": "^7.0.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
